# ByteScope

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: ByteScope  CMakeCache.txt  Makefile  cmake_install.cmake
src/: diff.cpp  diff.h  file_load.cpp  file_load.h  main.cpp  metrics.cpp  metrics.h  sha256.cpp  sha256.h  string_extract.cpp  string_extract.h  ui.cpp  ui.h
